compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__prelude__qualified_error.snap
---
source: compiler-core/src/nix/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Error(1) }\n"
---
let
  gleam' = builtins.import ./../gleam.nix;
  
  go = { }: gleam'.Error 1;
in { inherit go; }
