compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__prelude__qualified_nil.snap
---
source: compiler-core/src/nix/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Nil }\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Nil }


----- COMPILED NIX
let gleam' = builtins.import ./../gleam.nix; go = { }: null; in { inherit go; }
