compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__prelude__qualified_ok.snap
---
source: compiler-core/src/nix/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Ok(1) }\n"
---
let
  gleam' = builtins.import ./../gleam.nix;
  
  go = {}: gleam'.Ok 1;
in { inherit go; }
